--- a/bcplkit-0.9.7/INSTALL
+++ b/bcplkit-0.9.7/INSTALL
@@ -25,10 +25,10 @@ followed by (as root)
 
     ./makeall install
 
-Otherwise, change to the "src" directory.  Check that the "sys.s"
-symbolic link points to "sys_linux64.s" on 64-bit Linux systems, or to
-"sys_linux.s" or "sys_freebsd.s" as
-appropriate for your system.  Enter
+Otherwise, change to the "src" directory.  The "makeall" script will
+create or replace the "sys.s" link as needed.  It should point to
+"sys_linux64.s" on 64-bit Linux systems, or to "sys_linux.s" or
+"sys_freebsd.s" as appropriate for your system.  Enter
 
     make
 
