--- a/bcplkit-0.9.7/INSTALL
+++ b/bcplkit-0.9.7/INSTALL
@@ -21,8 +21,8 @@ on a supported platform), try
 
     ./makeall
 
-The build defaults to the host bitness.  To force a 32- or 64-bit
-build pass the `BITS` variable, for example
+The build defaults to the host bitness.  Set `BITS=32` or `BITS=64` to
+override this choice, for example
 
     BITS=64 ./makeall
 
@@ -31,10 +31,10 @@ followed by (as root)
     ./makeall install
 
 Otherwise, change to the "src" directory.  The "makeall" script
-creates or replaces the `sys.s` link.  FreeBSD builds link to
-`sys_freebsd.s`.  Linux builds link to either `sys_linux.s` or
-`sys_linux64.s` depending on the `BITS` setting (the host bitness is
-used if `BITS` is not specified).  Enter
+creates or replaces the `src/sys.s` link.  FreeBSD builds link to
+`sys_freebsd.s`.  Linux builds link to `sys_linux.s` for 32-bit builds
+and to `sys_linux64.s` for 64-bit (the host bitness is used if `BITS`
+is not specified).  Enter
 
     make
 
